--- a/style.css
+++ b/style.css
@@ -1,1 +1,10 @@
-style.cs
+body {
+    padding: 0;
+    margin: 0;
+    font-size: 16px;
+}
+article {
+    width: 6em;
+    height: 8em;
+    background: #ccc;
+}
