--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     padding: 0;
     margin: 0;
     font-size: 16px;
+    font-family: "Open Sans", Arial, sans-serif;
 }
 section {
     display: flex;
