--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     padding: 0;
-    margin: 0;
+    margin: 3em;
     font-size: 16px;
     font-family: "Open Sans", Arial, sans-serif;
 }
@@ -16,7 +16,12 @@ h2 {
 }
 article {
     height: 20em;
-    width: 15em;
+    width: 20em;
     margin: 1em;
     background: tomato;
+    padding: 0.5em;
+}
+img {
+    display: block;
+    margin: 0 auto;
 }
