--- a/style.css
+++ b/style.css
@@ -1,27 +1,53 @@
 body {
     padding: 0;
-    margin: 3em;
+    margin: 0;
     font-size: 16px;
     font-family: "Open Sans", Arial, sans-serif;
+    background: #D7D7D7;
+}
+header {
+    padding: 0;
+    margin: 0;
+    background: #373641;
+    height: 8em;
+    color: #B0FFBD;
 }
 section {
+    padding: 0;
+    margin: 3em;
     display: flex;
     justify-content: space-between;
     flex-flow: row wrap;
     align-items: stretch;
 }
+h1 {
+    margin: 0;
+    padding: 1.2em 1.8em; 
+}
 h2 {
     margin: .6em;
     width: 100%;
 }
+h3 {
+    margin: 0;
+    font-size: 2em;
+}
 article {
-    height: 20em;
+    height: 30em;
     width: 20em;
     margin: 1em;
-    background: tomato;
+    background: #E6E6E6;
     padding: 0.5em;
 }
 img {
     display: block;
-    margin: 0 auto;
+    margin: 1em auto;
+}
+p {
+    margin: 0.1em;
+    font-size: 1.2em;
+}
+.baseline {
+    font-style: italic;
+    font-size: 1em;
 }
