--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ section {
 section.training,
 section.trainer {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     flex-flow: row wrap;
     align-items: stretch;
 }
@@ -49,7 +49,8 @@ section h2 {
 }
 
 article {
-    width: 18em;
+    flex: 1;
+    flex-basis: calc(20% - 4em);
     background: #E6E6E6;
     padding: 2em;
     margin: 1em;
@@ -58,6 +59,10 @@ article {
     flex-flow: column wrap;
     -webkit-box-shadow: 0 .1em .3em rgba(0, 0, 0, .25);
     -moz-box-shadow: 0 .1em .3em rgba(0, 0, 0, .25);
+}
+
+article:last-child {
+  align-self: flex-start;
 }
 
 article h3 {
