--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ section {
 section.training,
 section.trainer {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     flex-flow: row wrap;
     align-items: stretch;
 }
@@ -49,20 +49,16 @@ section h2 {
 }
 
 article {
-    flex: 1;
-    flex-basis: calc(20% - 4em);
+    /*width: 18em;*/
     background: #E6E6E6;
     padding: 2em;
-    margin: 1em;
+    /*margin: 1em;*/
+    margin-bottom: 1rem;
     display: flex;
     justify-content: space-between;
     flex-flow: column wrap;
     -webkit-box-shadow: 0 .1em .3em rgba(0, 0, 0, .25);
     -moz-box-shadow: 0 .1em .3em rgba(0, 0, 0, .25);
-}
-
-article:last-child {
-  align-self: flex-start;
 }
 
 article h3 {
