corrected humans grid & added margin on card link

--- a/style.css
+++ b/style.css
@@ -35,24 +35,14 @@ section {
     margin: 3em;
 }
 
-section.training,
-section.trainer {
-    display: flex;
-    justify-content: space-between;
-    flex-flow: row wrap;
-    align-items: stretch;
-}
-
 section h2 {
     margin: 1em;
     width: 100%;
 }
 
 article {
-    /*width: 18em;*/
     background: #E6E6E6;
     padding: 2em;
-    /*margin: 1em;*/
     margin-bottom: 1rem;
     display: flex;
     justify-content: space-between;
@@ -89,5 +79,5 @@ article p {
 }
 
 article a {
-    justify-content: flex-end;
+    margin-top: 1rem;
 }
