Ajout email a tom et changement de couleur des icones

--- a/style.css
+++ b/style.css
@@ -110,6 +110,10 @@ article.links {
     display: inline;
 }
 
+article i {
+    color: #3caf87;
+}
+
 /* Template Formation */
 .formation p {
     margin: 0 0 1rem;
