--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ header {
     margin: 0;
     color: #fff;
     text-align: center;
-    background: #80D55F;
+    background: #1E7A2F;
 }
 
 header h1,
