--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
     font-size: 16px;
     line-height: 1.2;
     color: #4d4d4d;
-    font-family: "Open Sans", Arial, sans-serif;
+    font-family: overpass, sans-serif;
     background: #fff;
 }
 
@@ -64,6 +64,7 @@ header h1 {
     margin: 0;
     padding: 2rem 0;
     font-size: 3rem;
+    font-weight: 900;
 }
 
 header p {
