--- a/style.css
+++ b/style.css
@@ -62,13 +62,13 @@ header p {
 
 header h1 {
     margin: 0;
-    padding: 2rem 0;
+    padding: 4rem 0 1rem;
     font-size: 3rem;
     font-weight: 900;
 }
 
 header p {
-    padding:0 0 2rem;
+    padding:0 0 4rem;
 }
 
 /* CONTENT */
