--- a/style.css
+++ b/style.css
@@ -63,8 +63,13 @@ header p {
 header h1 {
     margin: 0;
     padding: 6rem 0 1rem;
-    font-size: 4.5rem;
+    font-size: 4rem;
     font-weight: 900;
+    text-transform: uppercase;
+}
+
+header h1 span {
+    font-size: 4.5rem;
 }
 
 header p {
