--- a/style.css
+++ b/style.css
@@ -50,9 +50,9 @@ blockquote {
 header {
     padding: 0;
     margin: 0;
-    color: #1E7A2F;
+    color: #80D55F;
     text-align: center;
-    background: #80D55F;
+    background: #1E7A2F;
 }
 
 header h1,
