--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ blockquote {
 header {
     padding: 0;
     margin: 0;
-    color: #80D55F;
+    color: #fff;
     text-align: center;
     background: #1E7A2F;
 }
