--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ header {
     margin: 0;
     color: #fff;
     text-align: center;
-    background: #277E52;
+    background: #339966;
 }
 
 header h1,
