--- a/style.css
+++ b/style.css
@@ -13,9 +13,9 @@ body {
     margin: 0;
     font-size: 16px;
     line-height: 1.2;
-    color: #4d4d4d;
+    color: #fff;
     font-family: overpass, sans-serif;
-    background: #fff;
+    background: #206643;
 }
 
 /* COMMON */
