--- a/style.css
+++ b/style.css
@@ -26,9 +26,13 @@ h2 {
 }
 
 h3 {
-    margin-bottom: 0.5rem;
-    font-size: 1.2rem;
-    color: #3caf87;
+    margin-bottom: 1rem;
+    font-size: 1.4rem;
+    color: #0B4C17;
+}
+
+h3:not(:first-child) {
+    margin-top: 3rem;
 }
 
 p {
