--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
     line-height: 1.5;
     color: #fff;
     font-family: overpass, sans-serif;
-    background: #339966;
+    background: #003428;
 }
 
 /* COMMON */
@@ -52,11 +52,15 @@ blockquote {
 
 /* HEADER */
 header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 610px;
     padding: 0;
     margin: 0;
-    color: #fff;
+    color: #002920;
     text-align: center;
-    background: #339966;
+    background: url(img/header.png) center center no-repeat;
 }
 
 header h1,
@@ -66,7 +70,7 @@ header p {
 
 header h1 {
     margin: 0;
-    padding: 6rem 0 1rem;
+    padding: 0;
     font-size: 4rem;
     font-weight: 900;
     text-transform: uppercase;
