--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
 h2 {
     margin: 1rem 0;
     font-size: 1.5rem;
-    color: #3caf87;
+    color: #92e080;
 }
 
 h3 {
@@ -99,6 +99,10 @@ section {
     width: 800px;
     padding: 0;
     margin: 3rem auto;
+}
+
+section:first-of-type {
+    margin-top: 0;
 }
 
 .intro {
