--- a/style.css
+++ b/style.css
@@ -76,13 +76,15 @@ dl:not(:last-child) {
 
 dt {
     font-size: 18px;
-    color: #03955e;
-    font-weight: bold;
+    color: #92e080;
 }
 
 dd {
     margin-top: 10px;
+    margin-left: 20px;
 }
+
+
 /* HEADER */
 header {
     display: flex;
