--- a/style.css
+++ b/style.css
@@ -51,6 +51,11 @@ a {
     font-weight: 500;
     text-decoration: none;
     border-bottom: 2px solid #92e080;
+    transition: color 0.3s ease-in-out
+}
+
+a:hover {
+    color: #92e080;
 }
 
 ul {
