--- a/style.css
+++ b/style.css
@@ -241,9 +241,9 @@ article a:hover {
 footer {
     padding: 0;
     margin: 0;
-    color: #003428;
+    color: #fff;
     text-align: center;
-    background: #92e080;;
+    border-top: 1px solid #fff;
 }
 
 footer p {
