--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ article h3 {
 article .baseline {
     font-style: italic;
     font-weight: normal;
-    font-size: .9rem;
+    font-size: 1rem;
     display: block;
 }
 
