--- a/style.css
+++ b/style.css
@@ -209,8 +209,10 @@ article a:hover {
     display: block;
     width: 800px;
     margin: 0 auto;
+    padding: 0;
     color: #fff;
     background: none;
+    box-shadow: none;
 }
 .formation p {
     margin: 0 0 1rem;
@@ -237,6 +239,20 @@ article a:hover {
 
 .tags li:not(:last-child):after {
     content: ',';
+}
+
+.formation .btn {
+    display: block;
+    width: 300px;
+    margin: 100px auto 80px;
+    padding: 15px 0;
+    font-size: 20px;
+    font-weight: 500;
+    text-align: center;
+    color: #fff;
+    background-color: #03955e;
+    border: none;
+    border-radius: 30px;
 }
 
 /* FOOTER */
